tests/rosetta/out/Pascal/babylonian-spiral.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/babylonian-spiral.pas
babylonian-spiral.pas(15,19) Error: Identifier not found "_appendList"
babylonian-spiral.pas(15,41) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
